# claude-shepherd

./: .gitignore  CLAUDE.md  LICENSE  README.md
docs/: faq.md  spec-format.md
ignored/claude/: blog-notes.md
scripts/: claude-resume  rate-limit-statusline.sh
shepherd-mcp/: pyproject.toml
shepherd-mcp/shepherd_mcp/: compile.py  drone_log.py  failure_archive.py  failure_archive_tools.py  faq.py  faq_tools.py  jobs.py  server.py  spec_library.py  spec_library_tools.py  worktree.py
shepherd-mcp/shepherd_mcp/providers/: base.py  ollama.py
shepherd-mcp/tests/: test_compile_pytest_gate.py  test_drone_files.py
