[project]
name = "shepherd-mcp"
version = "0.1.0"
description = "MCP server for orchestrating drone LLM code generation under Claude supervision"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pyflakes>=3.4.0",
]

[project.scripts]
shepherd-mcp = "shepherd_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
